[tool.poetry]
name = "databricks-ml"
version = "0.1.0"
description = ""
authors = ["Srikant Kumar Kalaputapu <skalaputapu@gmail.com>"]
readme = "README.md"
packages = [{include = "databricks_ml"}]

[tool.poetry.dependencies]
python = "^3.8"
cloudpickle = "^2.2.1"
pandas = "^1.5.3"
seaborn = "^0.12.2"
jupyterlab = "^3.5.3"
notebook = "^6.5.2"
voila = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
